Project

General

Profile

Actions

Bug #51536

closed

rgw: fail as expected when set-bucket-website attempted on a non-existent bucket

Added by XiangRui Meng almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
website
Backport:
octopus pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #51695: octopus: rgw: fail as expected when set-bucket-website attempted on a non-existent bucketResolvedCory SnyderActions
Copied to rgw - Backport #51696: pacific: rgw: fail as expected when set-bucket-website attempted on a non-existent bucketResolvedCory SnyderActions
Actions #2

Updated by XiangRui Meng almost 3 years ago

rgw: fail as expected when set/delete-bucket-website attempted on a non-existent bucket

Actions #3

Updated by Casey Bodley almost 3 years ago

  • Project changed from Ceph to rgw
  • Status changed from New to Fix Under Review
  • Tags set to website
  • Backport set to octopus pacific
  • Pull request ID set to 42195
Actions #4

Updated by Casey Bodley almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51695: octopus: rgw: fail as expected when set-bucket-website attempted on a non-existent bucket added
Actions #6

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51696: pacific: rgw: fail as expected when set-bucket-website attempted on a non-existent bucket added
Actions #7

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF